# iplogger

./: CMakeLists.txt  LICENCE.md
client/src/: CMakeLists.txt  main.c
server/src/: CMakeLists.txt  main.c
src/client/: main.c
src/server/: main.c
